# cppwasm

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_mvp_test.sh  build_on_work.sh
analyzer/: CMakeLists.txt  analyzer.cpp  analyzer.h
analyzer/result_json_tmp/: eos.json  llvm_climit_test.json
cppwasm/: CMakeLists.txt  LittleEndian.h  tmp-execution.h  wasi-alu.h  wasi-binary.h  wasi-execution.h  wasi-fund.hpp  wasi-leb128.h  wasi-runtime.h  wasi-section.h
cppwasm/base/: import_function.h  wasi-define.h  xmacro.h  xmemory.hpp
cppwasm/src/: wasi-execution.cpp  wasi-section.cpp
example/: show_string.c  store-load.cpp  store-load.wasm  store-load.wast  struct.cpp  struct.wasm  struct.wast
example/llvm_test/: climit.cpp  climit.wasm  module.cpp  struct.wasm
test/: CMakeLists.txt  test_add.cpp  test_bench.cpp  test_execution.cpp  test_ext.cpp  test_f32_f64.cpp  test_function.cpp  test_leb128.cpp  test_module.cpp  test_new_value.cpp  test_simple.cpp  test_store_load.cpp  test_string.cpp  test_struct.cpp
test_filed/: CMakeLists.txt  test_ext.cpp  test_new_value.cpp  test_simple.cpp  test_spec.cpp  test_value
test_mvp/: CMakeLists.txt  test_mvp.cpp  test_mvp.h
